# ochra

./: .buildinfo  .gitignore  API.md  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.doctrees/: environment.pickle  index.doctree  installation.doctree  usage.doctree
.github/workflows/: documentation.yml
OChRA_Manager/lab/: lab_base.py
Station/: amyStation.py  communicator.py  comunicator.py
api/common/: base.html  common.html  connections.html  equipment.html  spaces.html  storage.html  utils.html
api/manager/: connections.html  manager.html
connections/: db_connection.py  lab_connection.py  mongo_adapter.py  rest_adapter.py  station_connection.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  usage.rst
examples/: Example_lab.py
examples/camera_exp/: camera_station.py  error.py  take_photo.py
examples/kmriiwa_yumi_color_exp/: color_addition_exp.py  kmriiwa_station.py  yumi_station.py
examples/yumi_color_exp/: inventory_management_exp.py  yumi_color_addition_exp.py  yumi_station.py
lab/: acl.py  labBase.py  lab_base.py  station_connection.py
ochra/: LICENSE
ochra_common/: __init__.py  base.py
ochra_common/agents/: agent.py  manipulator.py  mobile_manipulator.py  mobile_platform.py  robot.py  robot_task.py  scientist.py  scientist_task.py  task.py
ochra_common/connections/: api_models.py  db_connection.py  lab_connection.py  lab_connection_legacy.py  mongo_adapter.py  rest_adapter.py  station_connection.py
ochra_common/equipment/: device.html  device.py  mobile_robot.py  operation.py  operation_proxy.py  operation_result.py  robot.py  stir_control.py  temperature_control.py  uigenerators.py
ochra_common/operations/: dispense.py  image.py  operation.py  operationModels.py  prime_dispense.py  robot_task.py  stop_stir.py
ochra_common/spaces/: lab.py  location.py  mobile_station.py  station.py  storage_station.py  work_station.py
ochra_common/storage/: consumable.py  container.py  device_inventory.py  holder.py  inventory.py  reagent.py  stock.py  vessel.py
ochra_common/templates/: components.html  device_base.html
ochra_common/utils/: db_decorator.py  enum.py  json_helpers.py  logging_config.py  misc.py  mixins.py  singleton_meta.py
ochra_discovery/: Lab.py
ochra_discovery/equipment/: operation.py  operation_result.py
ochra_discovery/spaces/: lab.py  lock.py  mobile_station.py  station.py  storage_station.py  work_station.py
ochra_discovery/storage/: holder.py  inventory.py  reagent.py  vessel.py
ochra_discovery/utils/: lock.py
ochra_manager/: __init__.py
ochra_manager/Station/: communicator.py  station.py
ochra_manager/connections/: db_connection.py  mongo_adapter.py  station_connection.py
ochra_manager/data/: data_router.py  data_server.py
ochra_manager/equipment/: operation_result.py
ochra_manager/lab/: Makefile  data_server.py  lab.py  lab_base.py  (+9 more)
operations/: dispense.py  image.py  operation.py  prime_reagent.py  start_stir.py  stop_heat.py  stop_stir.py
tests/: db_connection_test.py  lab_connection_test.py  test_abstract_base.py  test_agent_classes.py  test_db_connection.py  test_equipment_classes.py  test_lab_connection.py  test_lab_connection_new.py  test_mixins.py  test_spaces_classes.py  test_station_connection.py  test_storage_classes.py
utils/: singleton.py
(+262 files in other folders)
