[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ochra_common"
version = "0.0.0" #can switch to dynamic versioning and take from git tag later
authors = [ #add authors here
    #{name = "placeholder", email = "place@holder"},
] 
description = "OChRA_Common package..." #add summary of OChRA_Common here
readme = "README.md"
#license = {file = "LICENSE"} #don't need license a license yet
requires-python = ">=3.11"
dependencies = [
    "mongoengine==0.28.2",
    "numpy==2.0.0",
    "opencv_python==4.10.0.84",
    "pymongo==4.8.0",
    "pytest==8.2.2",
    "Requests==2.32.3",
    "typing_extensions==4.12.2",
] 
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    #"License :: OSI Approved :: [LICENSE]", #need to choose a license 
    "Programming Language :: Python",
    ]
keywords = ["OChRA", "chemistry", "lab", "framework", "automated"]

[project.urls]
Repository = "https://github.com/OChRA-lab/OChRA_Common"

[tool.hatch.build.targets.wheel]
package = "ochra_common"
