[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ochra_discovery"
version = "0.0.2" #can switch to dynamic versioning and take from git tag later
authors = [ #add authors here
    #{name = "placeholder", email = "place@holder"},
]
description = "OChRA_Discovery package..." #add summary of OChRA_Discovery here
readme = "README.md"
#license = {file = "LICENSE"} #don't need license a license yet
requires-python = ">=3.8"
dependencies = [ 
    "ochra_common>=0.0.2",
    "ruff>=0.7.2",
] 
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    #"License :: OSI Approved :: [LICENSE]", #need to choose a license 
    "Programming Language :: Python",
    ]
keywords = ["OChRA", "chemistry", "lab", "framework", "automated"] #keywords for PyPI search results

[project.urls]
Repository = "https://github.com/OChRA-lab/OChRA_Discovery"

[tool.hatch.build.targets.wheel]
package = "ochra_discovery"

